<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/common_spacing"
    android:paddingTop="@dimen/common_spacing"
    android:paddingEnd="@dimen/common_spacing"
    tools:context=".FeedFragment">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology_48dp" />

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/publishedTextView"
        app:layout_constraintEnd_toStartOf="@id/menuImageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/publishedTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menuImageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintTop_toBottomOf="@id/authorTextView"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuImageButton"
        style="@style/Widget.AppTheme.BasicIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@+id/publishedTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatarImageView,publishedTextView,menuImageButton"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintBottom_toTopOf="@id/videoContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrierContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="videoContainer"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="265dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeImageButton"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:checkable="true"
        android:contentDescription="@string/description_like"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrierContent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sharePostImageButton"
        style="@style/Widget.AppTheme.BasicIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/description_sharePost"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@id/likeImageButton"
        app:layout_constraintStart_toEndOf="@id/likeImageButton"
        app:layout_constraintTop_toTopOf="@id/likeImageButton" />

    <ImageButton
        android:id="@+id/viewsImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_views"
        app:layout_constraintBottom_toBottomOf="@+id/likeImageButton"
        app:layout_constraintEnd_toStartOf="@id/viewsCountTextViews"
        app:layout_constraintTop_toTopOf="@+id/likeImageButton"
        app:srcCompat="@drawable/ic_outline_visibility_24" />

    <TextView
        android:id="@+id/viewsCountTextViews"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/viewsCountTextView"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="@+id/viewsImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewsImageButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/videoContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/bottomBarrierContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTextView">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:backgroundTint="@android:color/transparent"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/videoImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/videoImageView"
            app:layout_constraintTop_toTopOf="@+id/videoImageView"
            app:maxImageSize="48dp"
            app:srcCompat="@drawable/ic_baseline_play_arrow_24"
            app:tint="#FFFFFF" />

        <ImageView
            android:id="@+id/videoImageView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/video_cover"
            android:src="@drawable/youtube_background"
            app:layout_constraintBottom_toTopOf="@+id/urlTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/urlTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/videoImageView"
            tools:text="www.youtube.com" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>